<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

    <View
        android:id="@+id/myRectangleView"
        android:layout_width="313dp"
        android:layout_height="524dp"
        android:background="@drawable/rectangleba"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.552" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="127dp"
        android:layout_height="45dp"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/_0"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toTopOf="@+id/myRectangleView" />

    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:background="@color/material_on_primary_disabled"
        android:text="@string/amount"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/myRectangleView"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toTopOf="@+id/myRectangleView"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/material_on_primary_disabled"
        android:text="@string/type"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toBottomOf="@+id/editDescription" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/material_on_primary_disabled"
        android:text="@string/subscription_income_food_or_travel"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toBottomOf="@+id/typeTextView" />

    <EditText
        android:id="@+id/editType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/enter_type_here"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@color/material_on_primary_disabled"
        android:text="@string/date"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toBottomOf="@+id/editType" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/describe_your_transaction"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView2" />

    <TextView
        android:id="@+id/descriptionTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="103dp"
        android:background="@color/material_on_primary_disabled"
        android:text="@string/description"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/myRectangleView"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toTopOf="@+id/myRectangleView"
        app:layout_constraintVertical_bias="0.251" />

    <EditText
        android:id="@+id/textTransactionDate"
        android:layout_width="133dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView"
        tools:text="03/19/2020" />

    <Button
        android:id="@+id/btnChangeDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/MyButtonDarkGray"
        android:text="@string/change"
        android:textSize="14sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/textTransactionDate"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="86dp"
        android:layout_height="36dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="524dp"
        android:background="@drawable/button_style"
        android:text="@string/save"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/myRectangleView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/toggleButtonEdit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />

    <ToggleButton
        android:id="@+id/toggleButtonEdit"
        android:layout_width="78dp"
        android:layout_height="38dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="2dp"
        android:text="@string/togglebutton"
        app:layout_constraintBottom_toTopOf="@+id/myRectangleView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.894" />


</androidx.constraintlayout.widget.ConstraintLayout>